Catalog scrollbar + Intro section adaptive + fixes

--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -411,6 +411,45 @@
 
 
     }
+
+    .dragscroll {
+        overflow: auto;
+      
+        &::-webkit-scrollbar {
+          width: 8px;
+          background: rgba(56, 56, 56, .3);
+          border-radius: 10px;
+          transition: all 0.3s;
+        }
+      
+        &::-webkit-scrollbar-thumb {
+          background-color: #383838;
+          height: 51px;
+          border-radius: 10px;
+          transition: all 0.3s;
+        }
+      
+        &::-webkit-scrollbar-thumb:hover {
+          background-color: #383838;
+          transition: all 0.3s;
+        }
+      
+/*         &::-webkit-scrollbar-button:vertical:start:decrement {
+          display: none;
+        }
+      
+        &::-webkit-scrollbar-button:vertical:end:increment {
+          display: none;
+        }
+      
+        &::-webkit-scrollbar-button:horizontal:start:decrement {
+          display: none;
+        }
+      
+        &::-webkit-scrollbar-button:horizontal:end:increment {
+          display: none;
+        } */
+    }
 }
 
 @media screen and (max-width: 1100px) {
